tests/Checker/everything/errors/10c.vc
int main() {
    +"test";
    return 1;
}
